# opencv_video_stream

./: CMakeLists.txt  README.md
opencv_video_stream/: CMakeLists.txt  cvstream.cpp  cvstream.h  index.html  main.cpp
